# QllamaTalk

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
QtRemoteObjectsFiles/: LlamaResponseGenerator.rep
android/: AndroidManifest.xml
apk_contents/: AndroidManifest.xml  classes2.dex  resources.arsc
apk_contents/assets/: android_rcc_bundle.rcc
apk_contents/res/drawable/: notification_bg.xml  notification_bg_low.xml  notification_tile_bg.xml
apk_contents/res/layout/: custom_dialog.xml  ime_secondary_split_test_activity.xml  notification_template_part_chronometer.xml  notification_template_part_time.xml
apk_contents/res/layout-v21/: notification_action.xml  notification_action_tombstone.xml  notification_template_custom_big.xml  notification_template_icon_group.xml
apk_contents/res/xml/: qtprovider_paths.xml
cmake/: download_llama_model.cmake  download_whisper_model.cmake  llama_setup.cmake  llmRemoteServer_setup.cmake  whisper_setup.cmake
content/: App.qml  CMakeLists.txt  ChatInputField.qml  ChatMessageModel.cpp  ChatView.qml  Expander.qml  LlamaChatEngine.cpp  LlamaChatEngine.h  LlamaResponseGenerator.cpp  LlamaResponseGenerator.h  OperationPhase.h  OperationPhaseIcon.qml  QtRemoteObjectsRemoteGenerator.cpp  QtRemoteObjectsRemoteGenerator.h  QtWebSocketsRemoteGenerator.cpp  QtWebSocketsRemoteGenerator.h  RemoteGeneratorInterface.h  RemoteResponseGeneratorCompositor.cpp  RemoteResponseGeneratorCompositor.h  Screen01.ui.qml  VoiceDetector.cpp  VoiceDetector.h  VoiceRecognitionEngine.cpp  VoiceRecognitionEngine.h  chatmessagemodel.cpp  chatmessagemodel.h  common.cpp  llamachatengine.cpp  llamachatengine.h  llamaresponsegenerator.cpp  llamaresponsegenerator.h  qtremoteobjectsremotegenerator.cpp  qtremoteobjectsremotegenerator.h  qtwebsocketsremotegenerator.cpp  qtwebsocketsremotegenerator.h  remoteresponsegeneratorcompositor.cpp  remoteresponsegeneratorcompositor.h
content/whisper_models/ggml-medium-encoder.mlmodelc/: metadata.json  model.mil
imports/: CMakeLists.txt
imports/QllamaTalk/: CMakeLists.txt  qmldir
imports/QllamaTalk/designer/: plugin.metainfo
src/: import_qml_plugins.h  main.cpp
